# Virgil

./: README.md  README.md~  meson.build  meson.build~
src/: Main.vala  main.vala  main.vala~  meson.build
src/Example/: DrawCircleExample.vala  TestProject.vala
src/Virgil/Engine/: Game.vala
src/Virgil/Entity/: Entity.vala  EntityComponent.vala
src/Virgil/Entity/Components/: SpriteRenderer.vala  Transform.vala
src/Virgil/Graphics/: Draw.vala  Sprite.vala  SpriteManager.vala
src/Virgil/Math/: Vector2D.vala
src/Virgil/Utility/: Colour.vala
vapi/: sdl2-gfx.vapi  sdl2-image.vapi  sdl2.vapi
