sources = files (
    # Main
    'Main.vala',

    # Engine
    'Virgil/Engine/Game.vala',

    # Utility
    'Virgil/Utility/Colour.vala',

    # Graphics
    'Virgil/Graphics/Draw.vala',
    'Virgil/Graphics/Sprite.vala',
    'Virgil/Graphics/Draw.vala',

    # Example
    'Example/TestProject.vala'
)
