sources = files (
    # Main
    'Main.vala',

    # Engine
    'Virgil/Engine/Game.vala',

    # Utility
    'Virgil/Utility/Colour.vala',

    # Graphics
    'Virgil/Graphics/Draw.vala',
    'Virgil/Graphics/Sprite.vala',
    'Virgil/Graphics/Draw.vala',

    # Entity
    'Virgil/Entity/Entity.vala',
    'Virgil/Entity/EntityComponent.vala',

    # Default Components
    'Virgil/Entity/Components/Transform.vala',

    # Math
    'Virgil/Math/Vector2D.vala',

    # Example
    'Example/TestProject.vala'
)
